kubernetes/web_app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microlearn-web-deployment
  labels:
    app: microlearn-web
spec:
  selector:
    matchLabels:
      app: microlearn-web
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: microlearn-web
    spec:
      containers:
      - name: microlearn-web
        image: arjuninventor/microlearn-web:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "500m"
