kubernetes/web_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microlearn-web-service
spec:
  type: NodePort
  selector:
    app: microlearn-web
  ports:
  - name: "port-1"
    port: 80
    protocol: TCP
    targetPort: 8080
