kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: microlearn.com
    http:
      paths:
      - path: /
        backend:
          serviceName: microlearn-web-service
          servicePort: 8080
  - host: api.microlearn.com
    http:
      paths:
      - path: /auth
        backend:
          serviceName: auth
          servicePort: 8080
